<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single" android:id="@+id/a">
        <item
            android:id="@+id/nav_ukoly"
            android:icon="@drawable/ic_ukoly"
            android:title="@string/ukoly"
            android:checked="true"/>
        <item
            android:id="@+id/nav_rozvrh"
            android:icon="@drawable/ic_rozvrh"
            android:title="@string/rozvrh" />
        <item
            android:id="@+id/nav_znamky"
            android:icon="@drawable/ic_znamky"
            android:title="@string/znamky" />
    </group>

    <group android:checkableBehavior="none" android:id="@+id/b">
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_sign_out"
            android:title="@string/sign_out"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />

    </group>


</menu>
