<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainScreenFragment">

    <fragment
        android:id="@+id/rozvrhFragment"
        android:name="org.bakalab.app.fragments.RozvrhFragment"
        android:label="@string/rozvrh"
        tools:layout="@layout/fragment_rozvrh" />
    <fragment
        android:id="@+id/mainScreenFragment"
        android:name="org.bakalab.app.fragments.MainScreenFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_main_screen" >
        <action
            android:id="@+id/action_mainScreenFragment_to_rozvrhFragment"
            app:destination="@id/rozvrhFragment" />
        <action
            android:id="@+id/action_mainScreenFragment_to_ukolyFragment"
            app:destination="@id/ukolyFragment" />
        <action
            android:id="@+id/action_mainScreenFragment_to_znamkyFragment"
            app:destination="@id/znamkyFragment" />
        <action
            android:id="@+id/action_mainScreenFragment_to_loginActivity"
            app:destination="@id/loginActivity"
            app:launchSingleTop="true" />
    </fragment>
    <fragment
        android:id="@+id/ukolyFragment"
        android:name="org.bakalab.app.fragments.UkolyFragment"
        android:label="@string/ukoly"
        tools:layout="@layout/fragment_ukoly" />
    <fragment
        android:id="@+id/znamkyFragment"
        android:name="org.bakalab.app.fragments.ZnamkyFragment"
        android:label="@string/znamky"
        tools:layout="@layout/fragment_znamky" />
    <activity
        android:id="@+id/loginActivity"
        android:name="org.bakalab.app.activities.LoginActivity"
        android:label="activity_login"
        tools:layout="@layout/activity_login" />
</navigation>